--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -21,4 +21,4 @@
 
 
 
-<%= link_to 'New category', new_brand_category_path %>|<%= link_to 'Back to brands', brands_path %>
+<%= link_to 'New category', new_brand_category_path(@brand) %>|<%= link_to 'Back to brands', brands_path %>
